# ant-simulation

./: .clang-format  CMakeLists.txt  README.md
.cache/clangd/index/: configuration.cpp.16F4D3F2B7ABFD02.idx  configuration.h.1E6D76FA69DBBFD1.idx  game.cpp.89DC877F9FC7D417.idx  game.h.0C32D66C6848BB84.idx  main.cpp.76BD900703A16AAE.idx  pch.h.BFDA6878572E1974.idx  player.cpp.50CC204BDC3E82B0.idx  player.h.134FB3C197690DB6.idx  resourceManager.h.3B39E4D785F2DFAF.idx  world.cpp.ABED47CDC7FB573A.idx  world.h.7EE4698ED5537665.idx
include/: ant.h  colony.h  configuration.h  game.h  helper.h  pch.h  player.h  spatialHash.h  text.h  world.h
src/: ant.cpp  colony.cpp  configuration.cpp  game.cpp  helper.cpp  main.cpp  player.cpp  text.cpp  world.cpp
